# CS250-final

./: .dockerignore  .env.sample  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 04ba8cef0fc4_user_relationship.py  08d73186a327_reminder_fields.py  51981bff6657_canvas_token.py  71d0fd55128f_user_reminders_celery.py  851e5cfc660e_reminder_model.py  b72301ff5fca_reminder_deadline.py  efb9612ddafc_init.py  f5686d5095c7_user_model.py
app/: __init__.py  celery.py  main.py  tasks.py  users.py
app/core/: __init__.py  database.py  settings.py
app/models/: __init__.py  user.py
app/schemas/: __init__.py  task.py  user.py
scripts/: entrypoint.sh
